[package]
name = "motp"
version = "0.1.0"
authors = ["Paul Ollivier <contact@paulollivier.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A crate to interact with mOTP (creation & verification)"
readme = "README.md"
repository = "https://github.com/paulollivier/motp-rs"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "motp"
path = "src/lib.rs"

[[bin]]
name = "motp"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
md5 = "^0"
clap = "^2.33.1"
clipboard-ext = "0.2.0"
